# pdf-rag-chat

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/core/: config.py
app/models/: schemas.py
app/rag/: chatbot.py  chunker.py  embeddings.py
app/services/: pdf_extractor.py  pdf_storage.py
data/: .gitignore
frontend/: styles.py  ui.py
tests/: test_chatbot.py  test_chunker.py  test_embeddings.py  test_pdf_extractor.py  test_pdf_storage.py
