[project]
name = "pdf-rag-chat"
version = "0.1.0"
description = "PDF-based RAG chat application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.25.0",
    "streamlit>=1.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
