[project]
name = "pdf-rag-chat"
version = "0.1.0"
description = "PDF-based RAG chat application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "ollama>=0.6.2",
    "pymupdf>=1.25.0",
    "sentence-transformers>=3.3.1,<4",
    "streamlit>=1.41.0",
    "torch>=2.2,<2.3",
    "transformers>=4.41,<4.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
